--- a/HROS-UI/package.json
+++ b/HROS-UI/package.json
@@ -13,7 +13,7 @@
     "echarts": "^4.5.0",
     "element-ui": "^2.13.0",
     "font-awesome": "^4.7.0",
-    "node-sass": "^4.12.0",
+    "sass": "^1.77.0",
     "screenfull": "^5.0.1",
     "v-charts": "^1.19.0",
     "vue": "^2.6.10",
@@ -30,7 +30,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^10.2.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
