--- a/hros/src/main/resources/application.properties
+++ b/hros/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 #MySQL\uFFFD\uFFFD\uFFFD\uFFFD
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.username=root
-spring.datasource.password=799hahahaha!
+spring.datasource.password=lm591013
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vhr?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
 spring.security.user.name=user1
 spring.security.user.password=password1
